--- a/localisation/english/bba_decisions_l_english.yml
+++ b/localisation/english/bba_decisions_l_english.yml
@@ -610,7 +610,7 @@
  decision_cost_pp_15_NavXP_10_tooltip:0 "It costs £pol_power  §Y15§! £navy_experience  §Y10§! to take the decision"
 
 ############################
-####### Neutrality ########
+####### SWITZERLAND ########
 ############################
 
  ##### ABSOLUTE NEUTRALITY ##########
