--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -747,12 +747,12 @@
  UKR_democratic_party: "UNDO" 
  UKR_democratic_party_long: "Ukrainian National Democratic Alliance" 
  UKR_communism_party: "KPU"
- UKR_communism_party: "Communist Party of Borscht"
+ UKR_communism_party_long: "Communist Party of Borscht"
  UKR_neutrality_party: "Borscht Progress Party"
  GEO_fascism_party: "Tbilisi Council"
  GEO_fascism_party_long: "The Patriotic Union Tetri Giorgi"
  GEO_democratic_party: "Georgian Menshevik Party"
- GEO_democratic_party: "Social Democratic Party of Georgia"
+ GEO_democratic_party_long: "Social Democratic Party of Georgia"
  GEO_communism_party:0 "Communist Party of Georgia"
  GEO_neutrality_party: "Gori Convention"
  GEO_neutrality_party_long: "Union of Georgian Traditionalists"
