--- a/localisation/english/wtt_decisions_l_english.yml
+++ b/localisation/english/wtt_decisions_l_english.yml
@@ -9,6 +9,8 @@
  form_eu_france_coring_states_tt:0 "Gain cores on all §YFrench§! states in Europe.\n"
  form_eu_italy_coring_states_tt:0 "Gain cores on all §YItalian§! states in Europe.\n"
  form_country_germany_coring_states_tt:0 "Gain cores on all §YGerman§! states.\n"
+ form_proletarian_state_british_mainland_required_states_tt: "Controls all of §Ymainland Britain§!."
+ form_proletarian_state_british_mainland_coring_states_tt: "Gain cores on all of mainland Britain. \n"
  form_spqr_france_required_states_tt:0 "Controls all §YFrench§! states in Europe, North Africa, and the Middle East."
  form_spqr_italy_required_states_tt:1 "Controls all §YItalian§! cores."
  form_spqr_britain_required_states_tt:0 "Controls all §YBritish§! states in Egypt, the Middle East, and the Eastern Mediterranean."
@@ -54,6 +56,7 @@
  form_country_nei_coring_states_tt:0 "Gain cores on all §YIndonesian§! states.\n"
  form_country_malaya_coring_states_tt:0 "Gain cores on all §YMalay§! states.\n"
  form_hre_germany_required_states_tt:0 "Controls all §YGerman§! states except §YOstpreussen§!."
+ form_hre_germany_coring_states_tt:0 "Gain cores on all §YGerman§! states except §YOstpreussen§!.\n"
  form_country_austria_required_states_tt:0 "Controls all §YAustrian§! states."
  form_country_austria_coring_states_tt:0 "Gain cores on all §YAustrian§! states.\n"
  form_ottoman_britain_coring_states_tt:0 "Gain cores on all §YBritish§! states in Egypt, the Middle East, and the Eastern Mediterranean.\n"
@@ -105,6 +108,21 @@ form_country_iceland_required_states_tt:0 "Controls all §YIcelandic§! states.\
  form_baltic_federation:0 "Unify the Baltics"
  form_ottoman_empire:0 "Re-form the Ottoman Empire"
  form_european_union:0 "Realize European Unity"
+ EU_alpine_expansion_decision: "Alpine Expansion"
+ EU_iberian_expansion_decision: "Iberian Expansion"
+ EU_west_slavic_expansion_decision: "West Slavic Expansion"
+ EU_baltic_expansion_decision: "Baltic Expansion"
+ EU_scandinavian_expansion_decision: "Scandinavian Expansion"
+ EU_british_isles_expansion_decision: "Expansion into the Isles"
+ EU_karelo_finnish_expansion_decision: "Karelo-Finnish Expansion"
+ EU_balkan_expansion_decision: "Balkan Expansion"
+ EU_aegean_expansion_decision: "Aegean Expansion"
+ EU_caucasian_expansion_decision: "Caucasian Expansion"
+ EU_kuban_expansion_decision: "Kuban Expansion"
+ EU_russian_expansion_decision: "Russian Expansion"
+ EU_belarusian_and_ukrainian_expansion_decision: "Belarusian and Ukrainian Expansion"
+ gain_cores_on_the_highlighted_states_tt: "Gain cores on all §YHighlighted§! states"
+ has_control_over_all_highlighted_states_tt: "Controls all §YHighlighted§! states"
  form_mutapa:0 "Recreate the Zimbabwean Empire"
  form_roman_empire:1 "Mare Nostrum!"
  form_persian_empire:0 "Recreate the Persian Empire"
@@ -154,10 +172,16 @@ form_country_iceland_required_states_tt:0 "Controls all §YIcelandic§! states.\
  form_rattanakosin_kingdom_category:0 "Strengthen the Rattanakosin Heritage"
  form_rattanakosin_kingdom_category_desc:0 "In recent years we have moved away from the traditional values our nation was originally founded upon. Now that we have reached the territorial extent from our glory days, perhaps it is time to embrace our history more tightly."
  form_hre_category:0 "Revive the Holy Roman Empire"
- form_hre_category_desc:0 "The splendor of our Kaiserin knows no bounds, and neither do the borders of our nation. These have now grown to encompass the limits of the old Holy Roman Empire, and the nations in our way are no longer in a position to object to our policies. The Kaiserin has decreed that the current opportunity shall be seized, and that the nation shall embrace its role as the spiritual successor of the Holy Roman Empire. Aquila Elegit Iovis Omnia Vincit!"
- form_greater_german_reich_category:0 "Proclaim Greater Kuro Reich"
+ form_hre_category_desc:0 "[GetWhoIsFormingHre]"
+ GER_is_forming_hre: "The splendor of our Kaiserin knows no bounds, and neither do the borders of our nation. These have now grown to encompass the limits of the old Holy Roman Empire, and the nations in our way are no longer in a position to object to our policies. The Kaiserin has decreed that the current opportunity shall be seized, and that the nation shall embrace its role as the spiritual successor of the Holy Roman Empire. Aquila Elegit Iovis Omnia Vincit!"
+ GER_is_forming_hre_without_victoria: "The splendor of our government knows no bounds, and neither do the borders of our nation. These have now grown to encompass the limits of the old Holy Roman Empire, and the nations in our way are no longer in a position to object to our policies. It has now been decreed that the current opportunity shall be seized, and that the nation shall embrace its role as the spiritual successor of the Holy Roman Empire. Aquila Elegit Iovis Omnia Vincit!"
+ AUS_is_forming_hre: "The splendor of our Archduke [ROOT.GetLeader] knows no bounds, and neither do the borders of our nation. These have now grown to encompass the limits of the old Holy Roman Empire, and the nations in our way are no longer in a position to object to our policies. The Archduke has decreed that the current opportunity shall be seized, and that the nation shall embrace its role as the spiritual successor of the Holy Roman Empire. Aquila Elegit Iovis Omnia Vincit!"
+ form_greater_german_reich_category: "The Greater Germanic Reich of the German Nation"
  form_greater_german_reich_category_desc:0 "Our enemies have been brought low before us, and our goals of expansion into the East have been accomplished. Now is the time to make the world understand the greatness of our nation, and to begin the transformation of our capital into something all can look to with pride."
- form_greater_german_reich:0 "Proclaim Greater Kuro Reich"
+ form_greater_german_reich: "Proclaim the New Order"
+ form_greater_german_state_category: "The New Proletarian Order"
+ form_greater_german_state_category_desc: "Despite opposition from all sides, we have managed to overcome the corrupt governments of Western Europe. No longer can they continue to oppress the workers, whom we now have set free and are rallying to our cause at this very moment. The shackles of Capitalism have been shattered and a new order dawns over Europe - and the world."
+ form_greater_proletarian_state: "Proclaim the Greater German Proletarian State"
  form_country_andalusia_coring_states_tt:0 "Gain cores on all §YSpanish§! and §YPortuguese§! states.\n"
  form_country_polynesia_coring_states_tt:0 "Gain cores on all §YPolynesian Islands§!.\n"
  liberate_angola:0 "Liberate Angola"
@@ -320,6 +344,24 @@ form_country_iceland_required_states_tt:0 "Controls all §YIcelandic§! states.\
  GER_reichskommissariat_belgien_nordfrankreich:0 "Reichskommissariat Belgien-Nordfrankreich"
  GER_reichskommissariat_ostland:0 "Reichskommissariat Ostland"
  GER_reichskommissariat_ukraine:0 "Reichskommissariat Ukraine"
+ GER_reichskommissariat_kaukasien: "Reichskommissariat Kaukasien"
+ GER_reichskommissariat_turkestan: "Reichskommissariat Turkestan"
+ GER_reichskommissariat_moskowien: "Reichskommissariat Moskowien"
+ GER_generalgouvernement: "Establish the Generalgouvernement"
+ GER_reichsprotektorat_bohemia_moravia: "Reichsprotektorat Böhmen und Mähren"
+ GER_reichskommissariat_iberien: "Reichskommissariat Iberien"
+ GER_reichskommissariat_balkan: "Reichskommissariat Balkan"
+ GER_reichskommissariat_grossbritannien: "Reichskommissariat Großbritannien"
+ GER_reichskommissariat_nordafrika: "Reichskommissariat Nordafrika"
+ GER_reichskommissariat_mittelafrika: "Reichskommissariat Mittelafrika"
+ GER_reichskommissariat_klein_venedig: "Reichskommissariat Klein-Venedig"
+ GER_reichskommissariat_anden: "Reichskommissariat Anden"
+ GER_reichskommissariat_kolumbus: "Reichskommissariat Kolumbus"
+ GER_reichskommissariat_nordamerika: "Reichskommissariat Nordamerika"
+ GER_reichskommissariat_arabien: "Reichskommissariat Arabien"
+ GER_reichskommissariat_hindustan: "Reichskommissariat Großhindustan"
+ GER_reichskommissariat_ostasien: "Reichskommissariat Ostasien"
+ GER_reichskommissariat_australasien: "Reichskommissariat Australasien"
  reinstate_wilhelm_iv_succession_rights:0 "Reinstate Princess Wilhelm's Right of Succession"
  reinstate_wilhelm_iv_succession_rights_desc:1 "Kaiser Wilhelm III's daughter was forced to renounce her right of succession by desiring to marry against the approval of the then-head-of-family Wilhelm II. As Wilhelm III has now taken over that role, she might be able to pressure her exiled mother in supporting a reversal of this decision."
  reinstate_wilhelm_iv_succession_rights_tt:0 "The line of succession is altered.\n"
@@ -498,19 +540,25 @@ form_country_iceland_required_states_tt:0 "Controls all §YIcelandic§! states.\
  ban_communist_party:0 "Ban Communism"
  ban_communist_party_desc:0 "The Communist Party has been protesting against the government at every turn, sowing discontent and making it hard to govern. It is time to crack down on this."
  ban_communist_party_tt:1 "Change in popularity of Communism: §G-§![?.Root.party_popularity@communism|%0G].\n"
+ ban_neutrality_party_tt: "Change in popularity of Non-Aligned: §G-§![?.Root.party_popularity@neutrality|%0G].\n"
+ ban_neutrality_party: "Outlaw [ROOT.GetNeutralParty] Activities"
+ LUX_ban_neutrality_party: "Outlaw Monarchist Activities"
  anti_fascist_raids:0 "Anti-Fascist Raids"
  anti_fascist_raids_desc:0 "We must crack down on fascist elements in our nation for the sake of long-term domestic stability. Their influence is too great, and may potentially become a problem to the government."
  anti_democratic_raids:0 "Anti-Democratic Raids"
  anti_democratic_raids_desc:0 "We must crack down on democratic elements in our nation for the sake of long-term domestic stability. Their influence is too great, and may potentially become a problem to the state."
  anti_communist_raids:0 "Anti-Communist Raids"
  anti_communist_raids_desc:0 "We must crack down on communist elements in our nation for the sake of long-term domestic stability. Their influence is too great, and may potentially become a problem to the government."
+ anti_neutrality_raids: "Raid Political Dissidents"
+ LUX_anti_neutrality_raids: "Anti-Monarchist Raids"
+ anti_neutrality_raids_desc: "We must crack down on dissident activities in our nation for the sake of long-term domestic stability. Their political ideals are too far apart from ours, and may potentially become a problem to the government."
  object_to_attaches:0 "Object to Attaché"
  object_to_attaches_desc:0 "Our enemies are receiving foreign aid! We must issue a strong objection and demand the removal of any attachés."
  infrastructure_building_slot:0 "Region-wide Industrial Integration"
  infrastructure_building_slot_flag:0 "Has not already received an extra building slot from infrastructure."
  war_building_slot:0 "Industrial Land Appropriation"
  war_building_slot_flag:0 "Has not already received an extra building slot from land appropriation."
- special_projects:0 "Special Projects"
+ special_projects: "Heavy Industrial Projects"
  CHI_xian_fired:0 "Chinese Leaders invited to Xi'an"
  JAP_intervene_in_china_level_down:0 "Intervene In Zhongguo Level Down"
  JAP_china_step_up_war_effort:0 "Escalate the War in Zhongguo"
@@ -628,7 +676,8 @@ form_country_iceland_required_states_tt:0 "Controls all §YIcelandic§! states.\
  develop_tasmania_aluminium_deposits:0 "Exploit Bauxite Deposits in Tasmania"
  develop_benghazi_oil_fields:0 "Develop the Benghasi Oil Fields"
  develop_sirte_oil_fields:0 "Develop the Oil Fields in the Sirte"
- develop_matzen_oil_fields:0 "Develop the Matzen Oil Fields"
+ develop_matzen_oil_fields: "Develop the Matzen Oil Fields"
+ develop_sidamo_rubber_plantations: "Grow Rubber Plantations in Sidamo"
  develop_daqing_deposits:0 "Explore Daqing Oil Fields"
  develop_daqing_deposits_2:0 "Expand Daqing Oil Fields"
  expand_eregli_steel_works:0 "Expand Eregli Steel Works"
