--- a/localisation/replace/gup_replace_l_english.yml
+++ b/localisation/replace/gup_replace_l_english.yml
@@ -151,3 +151,12 @@
  trait_SOV_trotskyist:0 "Nonnist"
  trait_SOV_bukharinist:0 "Alinist"
  TUR_ismet_inonu:0 "Bosporus"
+ GER_anschluss:0 "Nishizumi Alliance"
+ GER_anschluss_desc:0 "The threat of Ooarai has been too prevalent for too long. We must put an end to this hegemony of upstart schools once and for all and bring back Miho to her righteous place."
+ GER_weltpolitik: "Weltpolitik"
+ GER_weltpolitik_desc: "We must now establish our place in the world of senshadou. Two choices, a thousand fates. \n\n-Maho Nishizumi"
+ GER_trade_interdiction:0 "Trade Interdiction"
+ GER_trade_interdiction_desc:0 "Our dockyards are committed to churning out U-boats, but we need to develop better ways of utilizing these 'wolf packs'. Give the admirals everything they need to conduct their simulations and war games..."
+ end_of_czechoslovakia_mefo_bills_tt:0 "Uses Gregor Sensha-Do Budget to reduce the cost of §Y[GetMilitaryProductionModifierName]§!.\n"
+ anschluss_mefo_bills_tt:0 "Uses Ooarai's tourism revenue to reduce the cost of §Y[GetMilitaryProductionModifierName]§!.\n"
+ yugoslavia_mefo_bills_tt:0 "Uses Brazava gold to reduce the cost of §Y[GetMilitaryProductionModifierName]§!.\n"
