--- a/localisation/english/lar_focus_l_english.yml
+++ b/localisation/english/lar_focus_l_english.yml
@@ -560,6 +560,11 @@
  SPR_enlist_the_carabineros:0 "Enlist the Carabineros"
  SPR_enlist_the_carabineros_desc:2 "As a stop-gap measure to man the frontlines we must turn to unorthodox solutions. Without a military, the Carabineros, a paramilitary frontier guard and customs force, will serve as as good a force as any to man the trenches."
  SPR_enlist_the_carabineros_tt:0 "Gain 1 unit with §Y3 Infantry§! battalions in 5 random states.\n"
+ has_hired_juan_negrin_tt: "§YJuan Negrín§!: Is hired as advisor"
+ SPA_embrace_pan_hispanism: "Embrace Pan-Hispanic Nationalism"
+ SPA_embrace_pan_hispanism_desc: "In recent years, there has been a surge in Panhispanism throughout our old colonies, and now with our successful campaigns of reconquest, it is time to embrace their ideas, so that the Spanish Empire can stand for another thousand years!"
+ SPA_embrace_pan_hispanism_tt: "We control every core state of §Y[CHL.GetName]§!, §Y[ARG.GetName]§!, §Y[ECU.GetName]§!, §Y[PRU.GetName]§!, §Y[URG.GetName]§!, §Y[PAR.GetName]§!, §Y[BOL.GetName]§!, §Y[COL.GetName]§!, §Y[VEN.GetName]§!, §Y[PAN.GetName]§!, §Y[COS.GetName]§!, §Y[NIC.GetName]§!, §Y[HON.GetName]§!, §Y[ELS.GetName]§!, §Y[GUA.GetName]§!, §Y[MEX.GetName]§!, §Y[DOM.GetName]§!, §Y[CUB.GetName]§! and §Y[PUE.GetName]§!."
+ SPA_absorb_the_portuguese_empire_tt: "We will gain cores on any §YPortuguese§! cores we control"
  SPR_the_popular_army:0 "The Popular Army"
  SPR_the_popular_army_desc:1 "Our new army will be made up of those untainted by the treachery of the military; those among the population who are zealous in their defense of the principles upon which the Republic is built, but who perhaps did not serve previously. Coupled with this reorganization we will also develop new arms and doctrines to aid this new army in their fight."
  SPR_take_the_initiative:0 "Take the Initiative"
@@ -880,6 +885,7 @@
  FRA_retribution_for_sedan_desc:0 "For more than half a century, the Germans have celebrated the Battle of Sedan, and their triumph over Napoleon the Third there. In the future, every German will learn to curse the name of that place."
  FRA_disunite_germany:0 "Disunite Germany"
  FRA_disunite_germany_desc:0 "The triumph over France allowed Prussia to unite the smaller German states under her banner. It is only right that this process is reversed, now that the Germans have been defeated."
+ FRA_disunite_germany_tt: "Renames the §YContinental System§! to §YConfédération du Rhin§!"
  FRA_return_to_borodino:0 "Return To Borodino"
  FRA_return_to_borodino_desc:0 "At Borodino, Napoleon came closest to achieving her victory in Europe. The Russian Army was all but destroyed, and had she been just a little faster, she could have brought the Russians to terms. We will show the world that it can be done."
  FRA_je_suis_la_deluge:1 "Je Suis Le Déluge"
