--- a/localisation/english/mtg_events_l_english.yml
+++ b/localisation/english/mtg_events_l_english.yml
@@ -521,6 +521,8 @@
  mtg_news.3.d:0 "Ask the Waffles how well Neutrality defended them in 1914."
  mtg_news.3.e:0 "They know the importance of remaining neutral."
  mtg_news.3.f:0 "Neutrality must be backed by force."
+ mtg_news.3.g: "Yet their support for us is unwavering!"
+ mtg_news.3.g_tt: "Their guarantee of us is §Rnot§! affected by this!"
  mtg_news.4.t:0 "[USA.GetNameDefCap] pursues interventionist policies"
  mtg_news.4.desc:0 "\nThe peace movement in [USA.GetNameDef] has suffered a severe setback as Congress passed a joint resolution encouraging President [USA.GetLeader] to use military force, if necessary, to safeguard [USA.GetAdjective] interests around the world.\n\nIt appears that many in Congress have decided that it was [USA.GetAdjective] indecisiveness that allowed the Great War to drag on for so long and consume so many lives. They point out that within a few months of US troops entering Europe, the Great War had come to an end. An earlier intervention, they argue, could have saved hundreds of thousands of lives."
  mtg_news.4.a:0 "We will fight them over there so we don't have to fight them over here."
@@ -1416,6 +1418,7 @@
  MTG_naval_treaty.9.a:0 "This will safeguard peace better than any Super-Battleship!"
  MTG_naval_treaty.9.b:0 "Why would they restrict themselves like this?"
  MTG_naval_treaty.9.c:0 "More money for the army, then."
+ MTG_naval_treaty.9.d:  "Who cares about navies..."
  MTG_naval_treaty.11.t:0 "Naval Treaty Abrogated"
  MTG_naval_treaty.11.desc:0 "With the outbreak of war, the [From.GetAdjective] government has officially informed the remaining signatories of the London Naval Treaty that, under Article 24, it considers the restrictions of the Naval Treaty to be no longer in the national interest. The [From.GetAdjective] ambassador has therefore announced that the Naval Treaty will be suspended for the duration of the war. Whether the restrictions will return into force after the war is over remains to be seen, but for the time being, we should consider ourselves no longer bound by the treaty obligations when it comes to designing and building ships."
  MTG_naval_treaty.11.a:0 "It was a noble attempt to safeguard peace."
