--- a/localisation/english/nsb_characters_l_english.yml
+++ b/localisation/english/nsb_characters_l_english.yml
@@ -740,6 +740,18 @@
  POL_karol_korytowski:0 "Karol Korytowski"
  POL_boleslaw_bierut:0 "Bolesław Bierut"
  POL_edward_osobka_morawski:0 "Edward Osóbka-Morawski"
+ # Divisional Commanders 
+ POL_zygmunt_podhorski: "Zygmunt Podhorski"
+ POL_adam_zakrzewski: "Adam Zakrzewski"
+ POL_konstanty_drucki_lubecki: "Konstanty Drucki-Lubecki"
+ POL_leon_strzelecki: "Leon Strzelecki"
+ POL_sergiusz_zahorski: "Sergiusz Zahorski"
+ POL_jerzy_grobicki: "Jerzy Grobicki"
+ POL_julian_filipowicz: "Julian Filipowicz"
+ POL_zygmunt_piasecki: "Zygmunt Piasecki"
+ POL_konstanty_plisowski: "Konstanty Plisowski"
+ POL_jan_karcz: "Jan Karcz"
+
 
  #CZECHOSLOVAKIA
  CZE_edvard_benesh:0 "Edvard Beneš"
