--- a/localisation/english/wtt_events_l_english.yml
+++ b/localisation/english/wtt_events_l_english.yml
@@ -108,6 +108,7 @@
  wtt_germany.17.t:0 "Kuro Communists Flee to BC Freedom"
  wtt_germany.17.d:0 "The Kuro government has cracked down on communism, and has banished them abroad. As a result we are now receiving a large influx of communist ideologues from our neighbour..."
  wtt_germany.17.a:0 "If only this doesn't destabilize the academy too much..."
+ wtt_germany.17.b: "Increase police funding and limit their influence over our politics!"
  wtt_germany.18.t:0 "Nishizumist Leadership Captured"
  wtt_germany.18.d:1 "At long last we have freed our country from the grip of our enemies, and those loyal citizens who rose up to support our cause may now finally return to their homes. As a nation, we may begin the long and arduous process of rebuilding our nation. The country's leadership, in turn, is free to begin looking ahead at what might come in the future: democracy, or a return to the old monarchy.\n\nOne last thing remains to be taken care of, however. With the end of the civil war, our troops have managed to capture a large group of the Nishizumist leadership. Now, there only remains the decision of what to do with this unsavory part of our recent history."
  wtt_germany.18.a:0 "Hang them!"
@@ -138,6 +139,7 @@
  SOV_GREAT_RED_MENACE_EVENT_DESC_2_COMMUNIST:0 "the threat of communism"
  SOV_GREAT_RED_MENACE_EVENT_DESC_2_EXILES:0 "this threat from the East"
  wtt_germany.24.a:0 "Let us hope they are right."
+ wtt_germany.24.b: "Never trust a [GER.GetAdjective]!"
  wtt_germany.25.t:0 "Pravda Smooths Relations"
  wtt_germany.25.d:0 "The Pravda has made a concerted effort to alleviating the concerns of European nations. With a public announcement they have claimed they do not have any hostile intentions, and hope that their restrained reaction to the belligerent Kuro rhetoric will speak for them."
  wtt_germany.25.a:0 "That remains to be seen."
@@ -990,18 +992,18 @@
 # # # #### ###  #   #  # ###  #  #      # #   #      ###  ###  #    
 # # # #  # #  # #   #  # #  # #  #      # #    #     #    #  # #  # 
  # #  #  # #  # ###  ##  #  # ###        #   ##      #    #  #  ##  
- #Ask Pravda for support
+ #Ask soviet for support
  wtt_warlord_vs_prc.1.t:0 "[warlord.GetLeader] pleads for support"
  wtt_warlord_vs_prc.1.desc:1 "A delegation from [warlord.GetLeader] has arrived in Moscow to sound us out about possible support in an internal party power struggle. They claim that [communist_china.GetLeader] is not sufficiently commited to the cause of communism and may, in fact, harbor reactionary thoughts and betray the revolution in its most critical phase.\n\n[warlord.GetLeader] instead proposes that we back her, promising eternal and undying loyalty to the communist cause in general and [SOU.GetLeader] in particular."
  wtt_warlord_vs_prc.1.a:0 "A loyal puppet may prove useful."
  wtt_warlord_vs_prc.1.a_tooltip:0 "This will lead to a war with §H[communist_china.GetNameDef]§! if they refuse.\n"
  wtt_warlord_vs_prc.1.b:0 "We have no use for such blatant opportunism."
- #Pravda support new warlord and tells communist_china that they are done.
+ #soviet support new warlord and tells communist_china that they are done.
  wtt_warlord_vs_prc.2.t:0 "A message from [soviet.GetLeader]"
  wtt_warlord_vs_prc.2.desc:0 "The representative of the [SOV.GetAdjective] government has informed us that [SOV.GetLeader] harbours grave doubts about the accuracy of [communist_china.GetLeader]'s interpretation of Marxist theory. In this critical phase of the class struggle in Zhongguo, we must not deviate from the correct application of Marxist-Leninist teachings. It appears that Moscow believes that [warlord.GetLeader] has a better understanding of what is needed to advance the Communist cause in Zhongguo. As far as Moscow is concerned, the party would do well to accept [warlord.GetLeader] as the new chairwoman, or suffer the displeasure of [SOV.GetLeader]."
  wtt_warlord_vs_prc.2.a:0 "Send [communist_china.GetLeader] to Moscow to straighten this out."
  wtt_warlord_vs_prc.2.b:0 "We will never bow to traitors!"
- #Pravda tells Warlord no support
+ #soviet tells Warlord no support
  wtt_warlord_vs_prc.3.t:0 "[SOV.GetLeader] Refuses"
  wtt_warlord_vs_prc.3.desc:0 "[SOV.GetLeader] reportedly remains unconvinced of our loyalty or ability to lead. The [SOV.GetAdjective] government continues to support [communist_china.GetLeader] as chairwoman of the Communist Party of Zhongguo."
  wtt_warlord_vs_prc.3.a:0 "Let's keep this between us."
@@ -1014,7 +1016,7 @@
  wtt_warlord_vs_prc.10.desc:0 "Faced with the choice between giving up power or calling the Pravda bluff, [communist_china.GetLeader] choose the latter. Unfortunately, it seems that [SOV.GetLeader] was not bluffing and hostilities have commenced. Given our precarious position, we have been subjected to intense pressure by both sides, with the Pravda demanding we help them in ousting the traitor.\n\nRefusal, they say, would be the same as chosing to side with [communist_china.GetLeader]."
  wtt_warlord_vs_prc.10.a:0 "It's not worth dying for [communist_china.GetLeader]"
  wtt_warlord_vs_prc.10.b:0 "We will not be party to this."
- #Pravda asks WTT_communist_china for more stuff after having supported them
+ #Soviet asks WTT_communist_china for more stuff after having supported them
  wtt_warlord_vs_prc.21.t:0 "[From.GetLeader] Demands our Support"
  wtt_warlord_vs_prc.21.desc:0 "A message from [From.GetLeader] has arrived, demanding that we step up deliveries of the previously agreed on economic aid."
  wtt_warlord_vs_prc.21.a:0 "This is the price we pay."
@@ -1026,7 +1028,7 @@
  wtt_warlord_vs_prc.23.desc:0 "[From.GetLeader] has answered our request for additional support with a flat refusal, claiming that her nation is utterly unable to make the "absurd" payments we demand."
  wtt_warlord_vs_prc.23.a:0 "she promised, and we will get what is ours!"
  wtt_warlord_vs_prc.23.b:0 "Let it slide just this once."
- #Pravda asks WTT_communist_china to become puppet
+ #Soviet asks WTT_communist_china to become puppet
  wtt_warlord_vs_prc.31.t:0 "[From.GetLeader] demands closer cooperation"
  wtt_warlord_vs_prc.31.desc:0 "A message from [From.GetLeader] has arrived, saying that our stage of the revolutionary struggle is a particularly vulnerable one that could easily fall victim to the counter-revolution. her special representative has been instructed to keep a close watch on proceedings in our nation and advise us on how to achieve victory in the class struggle.\n\nThe note goes further to say that any deviation from her 'suggestions' will be considered a sign that reactionary elements have taken hold of our government, and that the necessary steps would then be taken."
  wtt_warlord_vs_prc.31.a:0 "We welcome the opportunity to learn."
