--- a/localisation/replace/gup_replace_l_english.yml
+++ b/localisation/replace/gup_replace_l_english.yml
@@ -160,4 +160,5 @@
  end_of_czechoslovakia_mefo_bills_tt:0 "Uses Gregor Sensha-Do Budget to reduce the cost of §Y[GetMilitaryProductionModifierName]§!.\n"
  anschluss_mefo_bills_tt:0 "Uses Ooarai's tourism revenue to reduce the cost of §Y[GetMilitaryProductionModifierName]§!.\n"
  yugoslavia_mefo_bills_tt:0 "Uses Brazava gold to reduce the cost of §Y[GetMilitaryProductionModifierName]§!.\n"
-GER_replace_mefo_bills_with_recovering_economy_tt:0 ""
+ GER_replace_mefo_bills_with_recovering_economy_tt:0 ""
+ GER_anschluss_eq_trigger_tt:0 "At least 40000 infantry equipment in the army"
