--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -4,11 +4,11 @@
  INS_subject:0 "$OVERLORDADJ$ East Asia"
  INS_subject_DEF:0 "the $OVERLORDADJ$ Batavian East Asia"
  COG_subject:0 "$OVERLORDADJ$ Congo"
- MAL_subject:0 "$OVERLORDADJ$ Malaya"
+ MAL_subject:0 "$OVERLORDADJ$ Tigress"
  LBA_subject:0 "$OVERLORDADJ$ North Africa"
  SAU_subject:0 "$OVERLORDADJ$ Central Tayaran"
- MAL_UK_democratic:0 "Gloriana Malaya"
- MAL_UK_democratic_DEF:0 "Gloriana Malaya"
+ MAL_UK_democratic:0 "Gloriana Tigress"
+ MAL_UK_democratic_DEF:0 "Gloriana Tigress"
  RAJ_UK_democratic:0 "Gloriana Raj"
  RAJ_UK_democratic_DEF:0 "the Gloriana Raj"
  RAJ_UK_neutrality:0 "Gloriana Raj"
