--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -1484,21 +1484,21 @@
  JOR:0 "Jordan"
  JOR_DEF:0 "Jordan"
  JOR_ADJ:0 "Jordanian"
- EGY_fascism:0 "Imperial Kemet"
- EGY_fascism_DEF:0 "Imperial Kemet"
- EGY_democratic:0 "Egypt"
- EGY_democratic_DEF:0 "Egypt"
- EGY_neutrality:0 "Kingdom of Egypt"
- EGY_neutrality_DEF:0 "the Kingdom of Egypt"
- EGY_communism:1 "Soviet Republic of the Nile"
- EGY_communism_DEF:1 "the Soviet Republic of the Nile"
- EGY_fascism_ADJ:0 "Egyptian"
- EGY_democratic_ADJ:0 "Egyptian"
- EGY_neutrality_ADJ:0 "Egyptian"
- EGY_communism_ADJ:0 "Egyptian"
- EGY:0 "Egypt"
- EGY_DEF:0 "Egypt"
- EGY_ADJ:0 "Egyptian"
+ EGY_fascism:0 "Imperial Sphinx"
+ EGY_fascism_DEF:0 "Imperial Sphinx"
+ EGY_democratic:0 "Sphinx"
+ EGY_democratic_DEF:0 "Sphinx"
+ EGY_neutrality:0 "Kingdom of Sphinx"
+ EGY_neutrality_DEF:0 "the Kingdom of Sphinx"
+ EGY_communism:1 "Soviet Republic of the Sphinx"
+ EGY_communism_DEF:1 "the Soviet Republic of the Sphinx"
+ EGY_fascism_ADJ:0 "Sphinx"
+ EGY_democratic_ADJ:0 "Sphinx"
+ EGY_neutrality_ADJ:0 "Sphinx"
+ EGY_communism_ADJ:0 "Sphinx"
+ EGY:0 "Sphinx"
+ EGY_DEF:0 "Sphinx"
+ EGY_ADJ:0 "Sphinx"
  LBA_fascism:0 "Africa Nova"
  LBA_fascism_DEF:0 "Africa Nova"
  LBA_democratic:0 "Libyan Electorate"
@@ -1619,21 +1619,21 @@
  INS:0 "Indonesia"
  INS_DEF:0 "Indonesia"
  INS_ADJ:0 "Indonesian"
- MAL_fascism:0 "Malaysia"
- MAL_fascism_DEF:0 "Malaysia"
- MAL_democratic:0 "Republic of Malaysia"
- MAL_democratic_DEF:0 "the Republic of Malaysia"
- MAL_neutrality:0 "Republic of Malaysia"
- MAL_neutrality_DEF:0 "the Republic of Malaysia"
- MAL_communism:0 "Malay People's Republic"
- MAL_communism_DEF:0 "the Malay People's Republic"
- MAL_fascism_ADJ:0 "Malaysian"
- MAL_democratic_ADJ:0 "Malaysian"
- MAL_neutrality_ADJ:0 "Malaysian"
- MAL_communism_ADJ:0 "Malaysian"
- MAL:0 "Malaysia"
- MAL_DEF:0 "Malaysia"
- MAL_ADJ:0 "Malaysian"
+ MAL_fascism:0 "Tigress"
+ MAL_fascism_DEF:0 "Tigress"
+ MAL_democratic:0 "Republic of Tigress"
+ MAL_democratic_DEF:0 "the Republic of Tigress"
+ MAL_neutrality:0 "Republic of Tigress"
+ MAL_neutrality_DEF:0 "the Republic of Tigress"
+ MAL_communism:0 "Tigress People's Republic"
+ MAL_communism_DEF:0 "the Tigress People's Republic"
+ MAL_fascism_ADJ:0 "Tigressan"
+ MAL_democratic_ADJ:0 "Tigressan"
+ MAL_neutrality_ADJ:0 "Tigressan"
+ MAL_communism_ADJ:0 "Tigressan"
+ MAL:0 "Tigress"
+ MAL_DEF:0 "Tigress"
+ MAL_ADJ:0 "Tigress"
  LAO_fascism:0 "Unitary Laos"
  LAO_fascism_DEF:0 "Unitary Laos"
  LAO_democratic:0 "Republic of Laos"
