Guess whos back, back again, mahos back, tell a friend

--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -2701,4 +2701,6 @@ SWE_greater_nordic_reich_ADJ: "Swedish"
  ITA_REP_DEF:0 "the Anzio Republic"
  ITA_MEDUN:0 "Socialist Union of Mediterranean Countries"
  ITA_MEDUN_DEF:0 "the Socialist Union of Mediterranean Countries"
+
+ GER_strasserite_state:0 "Kuromorimine"
  
