--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -64,6 +64,7 @@
  akaboshism: "Kaiserin-stil"
  awkward_communicator: "Awkward Communicator"
  skilled_commander: "Skilled Commander"
+ strasserist: "Neo-Nishizumist"
 
  ##Kuro FOCUSES
  GER_KATYUSHA_IS_WATCHING_YOU: "§R[SOV.GetLeader]§! is aware of your actions and chocies on the Sensha-dou stage. §YTread lightly.§!"
