--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1393,6 +1393,9 @@
  RAA_fascism_party: "NSDAP"
  RAA_fascism_party_long: "Nationalsozialistische Deutsche Arbeiterpartei"
 
+ GER_black_front: "Nishizumist Front"
+ GER_black_front_long: "Nishizumist Front"
+
 
 
 
