--- a/localisation/english/nsb_characters_l_english.yml
+++ b/localisation/english/nsb_characters_l_english.yml
@@ -601,6 +601,7 @@
  GER_wilhelm_ii:0 "Wilhelm II"
  GER_victoria:0 "Victoria"
  GER_august_von_mackensen:0 "August von Mackensen"
+ GER_Maho_Nishizumi:0 "Maho Nishizumi"
 
  #ROMANIA
  ROM_gheorghe_tatarescu:0 "Noemi Kohiyama"
