--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -2703,4 +2703,7 @@ SWE_greater_nordic_reich_ADJ: "Swedish"
  ITA_MEDUN_DEF:0 "the Socialist Union of Mediterranean Countries"
 
  GER_strasserite_state:0 "Kuromorimine"
+ GER_strasserite_state_ADJ:0 "Kuromorimine"
+ GER_strasserite_state_DEF:0 "Kuromorimine"
+ 
  
