--- a/localisation/replace/gup_replace_l_english.yml
+++ b/localisation/replace/gup_replace_l_english.yml
@@ -163,3 +163,6 @@
  GER_replace_mefo_bills_with_recovering_economy_tt:0 ""
  GER_anschluss_eq_trigger_tt:0 "At least 40000 infantry equipment in the army"
  GER_revolutionary_nationalist:0 "Neo-Nishizumist"
+ GER_strasserite_state_fascism: "Kuromorimine"
+ GER_strasserite_state_fascism_ADJ: "Kuromorimine"
+ GER_strasserite_state_fascism_DEF: "Kuromorimine"
