--- a/localisation/replace/gup_replace_l_english.yml
+++ b/localisation/replace/gup_replace_l_english.yml
@@ -166,3 +166,35 @@
  GER_strasserite_state_fascism: "Kuromorimine"
  GER_strasserite_state_fascism_ADJ: "Kuromorimine"
  GER_strasserite_state_fascism_DEF: "Kuromorimine"
+
+ COG_fascism:3 "Mamba"
+ COG_fascism_DEF:4 "Mamba"
+ COG_democratic:2 "Mamba"
+ COG_democratic_DEF:2 "Mamba"
+ COG_neutrality:1 "Mamba"
+ COG_neutrality_DEF:1 "Mamba"
+ COG_communism:1 "Democratic Republic of the Mamba"
+ COG_communism_DEF:0 "Democratic Republic of the Mamba"
+ COG_fascism_ADJ:0 "Mamba"
+ COG_democratic_ADJ:0 "Mambese"
+ COG_neutrality_ADJ:0 "Mambese"
+ COG_communism_ADJ:0 "Mambese"
+ COG: "Mamba"
+ COG_DEF: "Mamba"
+ COG_ADJ: "Mamba"
+
+ COG_belgian_congo_neutrality: "Wafflean Mamba"
+ COG_belgian_congo_neutrality_DEF: "Wafflean Mamba"
+ COG_belgian_congo_neutrality_ADJ: "Mambese"
+ COG_belgian_congo_democratic: "Wafflean Mamba"
+ COG_belgian_congo_democratic_DEF: "Wafflean Mamba"
+ COG_belgian_congo_democratic_ADJ: "Mambese"
+ COG_belgian_congo_fascism: "Popular Revolutionary State of the Mamba"
+ COG_belgian_congo_fascism_DEF: "the Popular Revolutionary State of the Mamba"
+ COG_belgian_congo_fascism_ADJ: "Mambese"
+ COG_belgian_congo_communism: "Afrosocialist State of the Mamba"
+ COG_belgian_congo_communism_DEF: "the Afrosocialist State of the Mamba"
+ COG_belgian_congo_communism_ADJ: "Mambese"
+ COG_belgian_congo: "[BEL.GetAdective] Mamba"
+ COG_belgian_congo_DEF: "The [BEL.GetAdective] Mamba"
+ COG_belgian_congo_ADJ: "Mambese"
