--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -39,6 +39,7 @@
  1pldk:0 "1PLDK [Yukari Akiyama]"
  melancholic:0 "Melancholic [Mako Reizei]"
  itsthemorningfightnow:0 "Morning Fight [Mako Reizei]"
+ golden_spatulas:0 "Golden Spatulas"
  #Generic Flags
  has_died_flag: "has died"
 
